# solana-ua-bootcamp-2025-03-19

practice-1/keypair-gen/: Cargo.toml  README.md
practice-1/keypair-gen/src/: main.rs
practice-2/week-2/: Cargo.toml  README.md
practice-4/escrow/: Anchor.toml  jest.config.js
practice-4/escrow/programs/escrow/src/: lib.rs
practice-4/escrow/programs/escrow/src/instructions/: cancel_offer.rs  make_offer.rs  mod.rs  take_offer.rs
practice-4/escrow/tests/: escrow.test.ts
practice-4/favorites/: Anchor.toml  README.md
practice-4/favorites/programs/favorites/: Cargo.toml
practice-4/favorites/programs/favorites/src/: lib.rs
practice-4/favorites/tests/: favorites.test.ts  system-program-errors.ts
